--- a/assets/richtext/richtext.scss
+++ b/assets/richtext/richtext.scss
@@ -4,7 +4,7 @@
     &__container{
         display: flex;
         flex-direction: column;
-        padding: 2rem 1rem;
+        padding: 2rem;
         max-width: 1440px;
         margin: auto;
     }
