--- a/assets/richtext/richtext.css
+++ b/assets/richtext/richtext.css
@@ -1,10 +1,7 @@
-.soype-richtext {
-  background-color: #eff4f8;
-}
 .soype-richtext__container {
   display: flex;
   flex-direction: column;
-  padding: 2rem 1rem;
+  padding: 2rem;
   max-width: 1440px;
   margin: auto;
 }
@@ -25,4 +22,7 @@
   align-items: flex-start;
   justify-content: center;
   text-align: justify;
+}
+.soype-richtext__title {
+  margin-bottom: 1rem;
 }/*# sourceMappingURL=richtext.css.map */
