--- a/assets/hero/hero.css
+++ b/assets/hero/hero.css
@@ -26,9 +26,31 @@
   max-width: 600px;
   display: flex;
 }
+.soype-hero__media--box {
+  box-shadow: 0 0 20px 3px hsla(212, 7%, 43%, 0.1);
+}
+.soype-hero__media--box img {
+  border-radius: 2rem;
+}
 .soype-hero__content {
   flex: 0.8;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .soype-hero__title {
   margin-bottom: 1rem;
+}
+.soype-hero__desc {
+  margin-bottom: 1rem;
+}
+
+.soype-button, .wc-block-cart__submit-container {
+  background-color: var(--wf-main-color);
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+  color: white;
+}
+.soype-button a, .wc-block-cart__submit-container a {
+  color: white !important;
 }/*# sourceMappingURL=hero.css.map */
