--- a/assets/hero/hero.scss
+++ b/assets/hero/hero.scss
@@ -28,14 +28,40 @@
         max-width: 600px;
         display: flex;
         // align-items: center;
+
+        &--box{
+            box-shadow: 0 0 20px 3px hsla(212,7%,43%,.1);
+
+            img{
+                border-radius: 2rem;
+            }
+        }
     }
 
     &__content{
         flex: 0.8;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 
     &__title{
         margin-bottom: 1rem;
     }
 
+    &__desc{
+        margin-bottom: 1rem;
+    }
+
+}
+
+.soype-button, .wc-block-cart__submit-container{
+    background-color: var(--wf-main-color);
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    color: white;
+
+    a{
+        color: white !important;
+    }
 }
