--- a/assets/twocolumnblock/twocolumnblock.scss
+++ b/assets/twocolumnblock/twocolumnblock.scss
@@ -8,7 +8,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
 
-        @media (max-width: 768px){
+        @media (max-width: 1120px){
             grid-template-columns: 1fr;
             grid-template-rows: 2fr;
         }
@@ -28,6 +28,10 @@
             }
         }
 
+        @media (max-width: 1120px){
+            align-items: center;
+        }
+
         @media (max-width: 768px){
             flex-direction: column;
 
@@ -42,6 +46,14 @@
         min-width: 300px;
         display: flex;
         // align-items: center;
+
+        @media (max-width: 1120px){
+            min-width: 600px;
+        }
+
+        @media (max-width: 768px){
+            min-width: 300px;
+        }
     }
 
     &__title{
