Carousel max width

--- a/assets/carousel/carousel.scss
+++ b/assets/carousel/carousel.scss
@@ -13,6 +13,9 @@
 .soype-carousel__viewport {
   overflow: hidden;
   width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .soype-carousel__track {
