--- a/assets/richtext/richtext.css
+++ b/assets/richtext/richtext.css
@@ -1,7 +1,7 @@
 .soype-richtext__container {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 4rem 2rem;
   max-width: 1440px;
   margin: auto;
 }
