--- a/assets/richtext/richtext.scss
+++ b/assets/richtext/richtext.scss
@@ -3,7 +3,7 @@
     &__container{
         display: flex;
         flex-direction: column;
-        padding: 2rem;
+        padding: 4rem 2rem;
         max-width: 1440px;
         margin: auto;
     }
