--- a/assets/twocolumnblock/twocolumnblock.scss
+++ b/assets/twocolumnblock/twocolumnblock.scss
@@ -1,63 +1,137 @@
-.soype-twocolumnblock{
+.soype-twocolumnblock {
+  &__inner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__row {
+    &-inner {
+      margin: auto;
+      max-width: 1440px;
+      padding: 4rem 2rem;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 1fr;
+
+      @media (max-width: 1120px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr;
+      }
+    }
+  }
+
+  &__col {
+    display: flex;
+    justify-content: space-between;
+
+    &-1,
+    &-3 {
+      flex-direction: row-reverse;
+      .soype-twocolumnblock__content {
+        padding-left: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
+
+    &-2,
+    &-4 {
+      .soype-twocolumnblock__content {
+        text-align: right;
+        padding-right: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+    }
+
+    &-1,
+    &-2 {
+      .soype-twocolumnblock__content {
+        padding-top: 4rem;
+      }
+    }
+
+    &-3,
+    &-4 {
+      .soype-twocolumnblock__content {
+        padding-bottom: 4rem;
+      }
+    }
+
+    @media (min-width: 768px) {
     
-    &__inner{
-        margin: auto;
-        max-width: 1440px;
-        padding: 4rem 2rem;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1fr;
-
-        @media (max-width: 1120px){
-            grid-template-columns: 1fr;
-            grid-template-rows: 2fr;
-        }
+      &-3,
+      &-4 {
+        margin-top: 4rem;
+      }
     }
 
-    &__col{
-        display: flex;
-        justify-content: center;
-
-        &-1{
-            flex-direction: row-reverse;
-        }
-
-        &-2{
-            .soype-twocolumnblock__content{
-                text-align: right;
-            }
-        }
-
-        @media (max-width: 1120px){
-            align-items: center;
-        }
-
-        @media (max-width: 768px){
-            flex-direction: column;
-
-            &-1, &-2{
-                flex-direction: column;
-            }
-
-        }
+    @media (max-width: 1120px) {
+      align-items: center;
     }
 
-    &__media{
-        min-width: 300px;
-        display: flex;
-        // align-items: center;
+    @media (max-width: 768px) {
+        margin-top: 4rem;
+      flex-direction: column;
 
-        @media (max-width: 1120px){
-            min-width: 600px;
-        }
+      &-1,
+      &-2,
+      &-3,
+      &-4 {
+        flex-direction: column;
+      }
+    }
+  }
 
-        @media (max-width: 768px){
-            min-width: 300px;
-        }
+  &__content {
+    width: 100%;
+  }
+
+  &__media {
+    min-width: 300px;
+    display: flex;
+    width: 50%;
+    padding: 1rem;
+    // align-items: center;
+
+    @media (max-width: 1120px) {
+      min-width: 600px;
     }
 
-    &__title{
-        margin-bottom: 1rem;
+    @media (max-width: 768px) {
+      min-width: 300px;
     }
 
+    &--box {
+      // box-shadow: 0 0 20px 3px hsla(212,7%,43%,.1);
+
+      img {
+        border-radius: 2rem;
+      }
+    }
+  }
+
+  &__cta{
+    margin-top: 1rem;
+  }
+
+  &__title {
+    margin-bottom: 1rem;
+  }
+}
+.soype-button, .wc-block-cart__submit-container{
+    background-color: var(--wf-main-color);
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    color: white;
+
+    a{
+        color: white !important;
+    }
+
+    &:hover{
+      color: white !important;
+    }
 }
